# learn_snakemake

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Snakefile  batch_startup.sh  config.yml  fastp.json  main.py  pool_config.json  pyproject.toml  samples.tsv  snpEff_summary.html
rules/: downloaders.smk  mapping.smk  qc.smk  variant_caling.smk  variant_calling.smk
